# shitcoin-garden

./: .gitignore  Cargo.toml  Justfile  README  README.md  Shuttle.toml  flake.nix  package-lock.json  toolchain.toml
artifacts/: checksum.txt  mock-dex.wasm  shitcoin-garden.wasm
contract/: Cargo.toml  lib.rs  msg.rs  schema.rs  state.rs  test.rs
contract/mock-dex/: Cargo.toml  lib.rs
schema/: shitcoin-garden.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_degen_metadata.json  response_to_shitcoin_metadata.json  response_to_shitcoins.json
scripts/: astroport-integration.test.js  deploy.js  localnet-integration.test.js
web/: Cargo.toml
web/js/: script.js
web/src/: chain.rs  events.rs  main.rs  model.rs  view.rs
web/templates/: base.html  index.html  presale.html  presales.html  updated_presale.html
